<resources>
    <string name="app_name">YUL Travel</string>
    <string name="welcome_to_yul" translatable="false">Welcome to the YUL Travel App!</string>
    <string name="start" translatable="false">Start</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>


    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="setup_application" translatable="false">Setup application</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="weather" translatable="false">Weather</string>
    <string name="name" translatable="false">Name:</string>
    <string name="where_are_you_from" translatable="false">Where are you from</string>
    <string name="interest" translatable="false">Interest</string>
    <string name="spots" translatable="false">Spots</string>
    <string name="directions" translatable="false">Directions</string>
    <string name="plans" translatable="false">Plans</string>
    <string name="enter_name" translatable="false">Enter Name</string>
    <string name="food" translatable="false">Food</string>
    <string name="nature" translatable="false">Nature</string>
    <string name="sight_seeing" translatable="false">Sight Seeing</string>
    <string name="boats" translatable="false">Boats</string>
    <string name="sports" translatable="false">Sports</string>
    <string name="vacation_time" translatable="false">Vacation Time</string>
    <string name="setup" translatable="false">Setup</string>
    <string name="today" translatable="false">Today:</string>
    <string name="wear_a_light_jacket" translatable="false">Wear a light jacket and light pants - it will get warmer throughout the day</string>
    <string name="_18deg">18°</string>
    <string name="all_time_hot_spots" translatable="false">All Time Favorite Hot Spots!</string>
    <string name="mont_royal">Mont-Royal</string>
    <string name="user_name" translatable="false">new user</string>
    <string name="view_more"><![CDATA[View more >]]></string>
    <string name="enter" translatable="false">Enter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="category_default">[Category]</string>
    <string name="welcome_to_mtl" translatable="false">Welcome to  MTL!</string>
    <string name="hot_spots" translatable="false">Hot Spots</string>
    <string name="airport" translatable="false">Airport</string>
    <string name="plan_name_default" translatable="false">[Plan name]</string>
    <string name="date_and_time_default">[Date and time]</string>
    <string name="address" translatable="false">Address</string>
    <string name="description_default" translatable="false">Description</string>
    <string name="visit_eventful">Visit eventful</string>
    <string name="title_default" translatable="false">Title</string>
    <string name="welcome" translatable="false">Welcome</string>
</resources>
