<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/CaptionPicture"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/mont_royal_view"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/setupActivityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:onClick="openActivity"
                android:text="@string/setup_application" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"><![CDATA[>

                ]]>

                <ImageButton
                    android:id="@+id/plansImageButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/plans"
                    android:onClick="openActivity"
                    android:src="@drawable/ic_plan"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/weatherImageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/ic_plan" />

                <ImageButton
                    android:id="@+id/spotsImageButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/spots"
                    android:contentDescription="@string/spots"
                    android:onClick="openActivity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weatherImageButton"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/directionsImageButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/direction_arrow"
                    android:contentDescription="@string/directions"
                    android:onClick="openActivity"
                    app:layout_constraintBottom_toBottomOf="@+id/spotsImageButton"
                    app:layout_constraintEnd_toEndOf="@+id/plansImageButton"
                    app:layout_constraintHorizontal_bias="0.888"
                    app:layout_constraintStart_toEndOf="@+id/spotsImageButton"
                    app:layout_constraintTop_toTopOf="@+id/spotsImageButton"
                    app:layout_constraintVertical_bias="0.0"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/weatherImageButton"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="openActivity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mont_royal_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>